Fixed Please Wait, Window Overflow problem and removed useless comments from Window.js

--- a/jwic.samples/samples.webapp/jwic/pleaseWait.css
+++ b/jwic.samples/samples.webapp/jwic/pleaseWait.css
@@ -14,4 +14,5 @@
  	height: 48px;
  	padding-top: 5px;
  	margin: 0px;
+ 	overflow: visible;
  }
